force-app/main/default/objects/DSSCallistaSync__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Values to facilitate DSS Callista Sync</description>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to determine whether to sync a field or not</description>
        <inlineHelpText>Set to true to Sync field</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Object the SyncTo field is on</description>
        <label>Object</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyncTo__c</fullName>
        <description>API name of the field to write to</description>
        <label>SyncTo</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DSSCallistaSync</label>
</CustomObject>